--- a/catalog.html
+++ b/catalog.html
@@ -243,6 +243,37 @@
         </form>
       </section>
     </main>
-
+    <footer class="main-footer">
+      <section class="social">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Vkontakte</span>
+            </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://t.me/htmlacademy ">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+        </ul>
+    </section>
+    <section class="footer-contacts">
+      <h2 class="visually-hidden">Контакты</h2>
+      <a class="footer-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Официальный сайт</h2>
+      <a class="footer-link" href="https://htmlacademy.ru/study">
+        <img class="link-logo" src="#" alt="Логотип сайта.">
+      </a>
+    </section>
+    </footer> 
   </body>
 </html>
