--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="header-logo" src="#" alt="Логотип Седоны">
+      <img class="header-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седоны">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -40,7 +40,7 @@
     </header>
     <main class="main-index">
       <section class="welcome">
-        <img class="welcome-img" src="#" alt="Добро пожаловать в Седону">
+        <img class="welcome-img" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону">
         <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
         <p class="description-bolder">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -132,7 +132,7 @@
     <section>
       <h2 class="visually-hidden">Официальный сайт</h2>
       <a class="footer-link" href="https://htmlacademy.ru/study">
-        <img class="link-logo" src="#" alt="Логотип сайта.">
+        <img class="link-logo" src="images/HTML Academy.svg" width="115" height="33" alt="Логотип сайта.">
       </a>
     </section>
     </footer>
