--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="header-logo" src="#" alt="Логотип Седоны">
+      <img class="header-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седоны">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -127,7 +127,7 @@
       <ul class="hotel-list">
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotel-1.jpg" width="300" height="211" alt="Amara Resort & Spa.">
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -146,7 +146,7 @@
         </li>
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotel-2.jpg" width="300" height="211" alt="Villas at Poco Diablo.">
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -165,7 +165,7 @@
         </li>
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotel-3.jpg" width="300" height="211" alt="Desert Quail Inn.">
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -183,7 +183,7 @@
         </li>
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotel-4.jpg" width="300" height="211" alt="GreenTree Inn.">
             <h3 class="hotel-card-title">GreenTree Inn</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -271,9 +271,9 @@
     <section>
       <h2 class="visually-hidden">Официальный сайт</h2>
       <a class="footer-link" href="https://htmlacademy.ru/study">
-        <img class="link-logo" src="#" alt="Логотип сайта.">
+        <img class="link-logo" src="images/HTML Academy.svg" width="115" height="33" alt="Логотип сайта.">
       </a>
     </section>
-    </footer> 
+    </footer>
   </body>
 </html>
