--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="main-header">
@@ -10,13 +11,13 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -33,7 +34,7 @@
               </span>
           </li>
           <li class="navigation-item">
-              <a class="navigation-link button" href="#">Хочу сюда!</a>
+              <a class="navigation-link-text button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -100,8 +101,8 @@
                     </li>
                   </ul>
                 </fieldset>
-                <button class="button" type="submit">Применить</button>
-                <button class="button" type="reset">Сюросить</button>
+                <button class="button-apply button-second" type="submit">Применить</button>
+                <button class="button-reset" type="reset">Сбросить</button>
                 </form>
           </section>
       </header>
@@ -113,13 +114,13 @@
           <option value="cheap">Сначала дешёвое</option>
           <option value="expensive">Сначала дорогое</option>
         </select>
-        <a class="button" href="#" >
+        <a class="button-cards" href="#" >
           <span class="visually-hidden">Показать карточки</span>
         </a>
-        <a class="button button-light" href="#">
+        <a class="button-full-cards button-light" href="#">
           <span class="visually-hidden">Показать карточку во весь экран</span>
         </a>
-        <a class="button button-light" href="#">
+        <a class="button-list-cards button-light" href="#">
           <span class="visually-hidden">Показать список</span>
         </a>
       </section>
@@ -127,13 +128,13 @@
       <ul class="hotel-list">
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="images/hotel-1.jpg" width="300" height="211" alt="Amara Resort & Spa.">
+            <img class="hotel-card-image" src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Amara Resort & Spa.">
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 4000 ₽</p>
-          <button class="card-button more-button" type="button">Подробнее</button>
-          <button class="card-button favorites-button" type="button">В избранное</button>
+          <button class="more-button button" type="button">Подробнее</button>
+          <button class="favorites-button button-second " type="button">В избранное</button>
           <p class="hotel-rating">
             <ul class="raiting-stars">
               <li class="star"></li>
@@ -146,13 +147,13 @@
         </li>
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="images/hotel-2.jpg" width="300" height="211" alt="Villas at Poco Diablo.">
+            <img class="hotel-card-image" src="images/hotels/hotel-2.jpg" width="300" height="211" alt="Villas at Poco Diablo.">
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 5000 ₽</p>
-          <button class="card-button more-button" type="button">Подробнее</button>
-          <button class="card-button in-favorites-button" type="button">В избранное</button>
+          <button class="more-button button" type="button">Подробнее</button>
+          <button class="favorites-button button-select" type="button">В избранном</button>
           <p class="hotel-rating">
             <ul class="raiting-stars">
               <li class="star"></li>
@@ -161,17 +162,17 @@
               <li class="star"></li>
             </ul>
           </p>
-          <p class="hotel-rating-text">Рейтинг:9,2</p>
+          <p class="hotel-rating-text hotel-rating-form">Рейтинг:9,2</p>
         </li>
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="images/hotel-3.jpg" width="300" height="211" alt="Desert Quail Inn.">
+            <img class="hotel-card-image" src="images/hotels/hotel-3.jpg" width="300" height="211" alt="Desert Quail Inn.">
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 2500 ₽</p>
-          <button class="card-button more-button" type="button">Подробнее</button>
-          <button class="card-button favorites-button" type="button">В избранное</button>
+          <button class="more-button button" type="button">Подробнее</button>
+          <button class="favorites-button button-second " type="button">В избранное</button>
           <p class="hotel-rating">
             <ul class="raiting-stars">
               <li class="star"></li>
@@ -183,13 +184,13 @@
         </li>
         <li class="hotel-card">
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="images/hotel-4.jpg" width="300" height="211" alt="GreenTree Inn.">
+            <img class="hotel-card-image" src="images/hotels/hotel-4.jpg" width="300" height="211" alt="GreenTree Inn.">
             <h3 class="hotel-card-title">GreenTree Inn</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 1500 ₽</p>
-          <button class="card-button more-button" type="button">Подробнее</button>
-          <button class="card-button favorites-button" type="button">В избранное</button>
+          <button class="more-button button" type="button">Подробнее</button>
+          <button class="favorites-button button-second " type="button">В избранное</button>
           <p class="hotel-rating">
             <ul class="raiting-stars">
               <li class="star"></li>
@@ -205,19 +206,19 @@
         <a class="pagination-link pagination-current">1</a>
       </li>
       <li class="pagination-item">
-        <a class="pagination-link pagination-current">2</a>
+        <a class="pagination-link paginatioin-box">2</a>
       </li>
       <li class="pagination-item">
-        <a class="pagination-link pagination-current">3</a>
+        <a class="pagination-link paginatioin-box">3</a>
       </li>
       <li class="pagination-item">
-        <a class="pagination-link pagination-current">4</a>
+        <a class="pagination-link paginatioin-box">4</a>
       </li>
       <li class="pagination-item">
-        <a class="pagination-link pagination-current">...</a>
+        <a class="pagination-link paginatioin-box">...</a>
       </li>
       <li class="pagination-item">
-        <a class="pagination-link pagination-current">10</a>
+        <a class="pagination-link paginatioin-box">10</a>
       </li>
       </ul>
       <p class="hotel-sort">
@@ -228,18 +229,13 @@
           <option value="expensive">12</option>
         </select>
       </p>
-      <section class="hotel-search">
-        <h3 class="hotel-search-title">Заинтересовались</h3>
-        <p class="hotel-search-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="hotel-search-button" href="#">Поиск гостиницы в Седоне</a>
-      </section>
-      <section class="subscription subscription-inner">
-        <h3 class="subscription-title">Подпишитесь на рассылку</h3>
-        <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <section class="subscription-inner">
+        <h3 class="subscription-inner-title">Подпишитесь на рассылку</h3>
+        <p class="subscription-inner-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="subscription-label" for="subscription-email"></label>
           <input type="email" name="subscription-email" id="subscription-email" placeholder="Ваш e-mail">
-          <button class="subscribe-button" type="submit">Подписаться</button>
+          <button class="subscribe-button button-second" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -248,17 +244,17 @@
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="vk-button" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Vkontakte</span>
             </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://t.me/htmlacademy ">
+              <a class="tg-button" href="https://t.me/htmlacademy ">
                 <span class="visually-hidden">Telegram</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="yt-button" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
