--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="main-header">
@@ -33,7 +34,7 @@
               </span>
           </li>
           <li class="navigation-item">
-              <a class="navigation-link button" href="#">Хочу сюда!</a>
+              <a class="navigation-link-text button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -47,42 +48,42 @@
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Приемущества</h2>
-        <div class="advantages-item">
+        <div class="advantages-item-city">
           <h3 class="advantages-title">Настоящий городок</h3>
           <p class="advantages-number">-№1-</p>
           <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item-home">
             <h3 class="advantages-title">Жильё</h3>
             <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-food">
             <h3 class="advantages-title">Еда</h3>
             <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-souvenirs">
             <h3 class="advantages-title">Сувениры</h3>
             <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
-        <div class="advantages-item">
+        <div class="advantages-item-bridge">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
           <p class="advantages-number">-№2-</p>
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </div>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item-area">
             <h3 class="advantages-title">Небольшая площадь</h3>
             <p class="advantages-number">-№3-</p>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-road">
             <h3 class="advantages-title">Красивая дорога</h3>
             <p class="advantages-number">-№4-</p>
             <p class="advantages-description">ВЕхать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-tourists">
             <h3 class="advantages-title">Мало туристов</h3>
             <p class="advantages-number">-№5-</p>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
@@ -92,7 +93,7 @@
       <section class="hotel-search">
         <h3 class="hotel-search-title">Заинтересовались</h3>
         <p class="hotel-search-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="hotel-search-button" href="#">Поиск гостиницы в Седоне</a>
+        <a class="hotel-search-text button" href="#">Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscription">
         <h3 class="subscription-title">Подпишитесь на рассылку</h3>
@@ -109,17 +110,17 @@
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="vk-button" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Vkontakte</span>
             </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://t.me/htmlacademy ">
+              <a class="tg-button" href="https://t.me/htmlacademy ">
                 <span class="visually-hidden">Telegram</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="yt-button" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
